fix: Apply text-shadow and fix the blurring effect on the landing page's text

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -65,10 +65,14 @@ body {
   font-size: 150px;
   line-height: 120px;
   letter-spacing: -12px;
+  text-shadow: 8px 8px 20px #8B8B8B;
+  filter: blur(2px);
 }
 
 .landing.sub_title {
   margin-top: 20px;
+  filter: blur(1.5px);
+  text-shadow: 4px 4px 20px #8B8B8B;
   font-size: 30px;
   line-height: normal;
   font-family: "HelveticaNeueNormal";
